# spirv2clc

./: .clang-format  CMakeLists.txt
lib/: CMakeLists.txt  translator.cpp
tests/testlayer/: testlayer.cpp
tools/: spirv2clc.cpp
